<resources>
    <string name="app_name">名刺図鑑</string>
    <string name="empty">--  --  --  --</string>

    <!-- 人物検索画面 -->
    <string name="progress_text_on_search">人物を読み込み中…</string>
    <string name="search_edittext_hint">人物を検索</string>
    <string name="no_persons_text">人物が登録されていません。</string>
    <string name="no_results_textview_text">該当する人物はいませんでした。</string>
    <string name="selected_person_count_text">名の人物を選択中</string>
    <string name="message_on_deleted_persons">削除しました</string>
    <string name="message_on_click_all_photos_view_button">実装予定です</string>

    <!-- ローディング画面 -->
    <string name="default_progress_text">読み込み中…</string>

    <!-- NavigationDrawerメニュー -->
    <string name="search_person_view">人物を検索</string>
    <string name="all_photos_view">写真一覧</string>
    <string name="nav_header_title">メニュー</string>

    <!-- 人物情報＆写真一覧画面のヘッダーメニュー -->
    <string name="back_button_text">＜戻る</string>
    <string name="save_button_text">保存</string>

    <!-- 人物情報＆写真一覧画面のAlertDialog -->
    <string name="positive_button_text">はい</string>
    <string name="negative_button_text">いいえ</string>
    <string name="confirm_dialog_title">確認</string>
    <string name="information_dialog_title">情報</string>

    <!-- 人物情報画面 -->
    <string-array name="sex_types">
        <item>不明</item>
        <item>男性</item>
        <item>女性</item>
    </string-array>
    <string name="required_label_text">＊</string>
    <string name="phonetic_name_label_text">名前 ( フリガナ )</string>
    <string name="name_label_text">名前 ( 漢字 )</string>
    <string name="sex_label_text">性別</string>
    <string name="organization_label_text">組織名 ( 会社、企業、団体など )</string>
    <string name="memo_label_text">メモ</string>
    <string name="first_phonetic_name_edittext_hint">セイ</string>
    <string name="last_phonetic_name_edittext_hint">メイ</string>
    <string name="first_name_edittext_hint">姓</string>
    <string name="last_name_edittext_hint">名</string>
    <string name="photos_label_text">写真</string>
    <string name="personal_info_label_text">人物情報</string>
    <string name="message_on_blank_error">必須項目が未入力です</string>
    <string name="message_on_illegal_error">フリガナは全角カタカナorひらがなで入力してください</string>
    <string name="message_on_saved_new_person">人物を追加しました</string>
    <string name="message_on_updated_personal_info">人物情報を保存しました</string>
    <string name="message_on_confirm_delete_person">削除してもよろしいでしょうか？</string>
    <string name="dialog_message_on_deleted_person">人物を削除しました。トップ画面に戻ります。</string>
    <string name="message_on_confirm_transit">保存されていませんが、遷移してもよろしいでしょうか？</string>

    <!-- 写真一覧画面 -->
    <string name="message_on_saved_photos">Picturesフォルダに写真を保存しました</string>
    <string name="message_on_failed_save_photos">書き込み権限がないので保存できませんでした</string>
    <string name="message_on_added_photos">写真を追加しました</string>
    <string name="message_on_failed_add_photos">同じ写真が既に追加されていました</string>
    <string name="message_on_failed_open_camera">権限がないのでカメラを起動できませんでした</string>
    <string name="message_on_no_camera_app">カメラアプリがありません</string>
    <string name="progress_text_on_add_photos">写真を読み込み中…</string>
    <string name="message_on_click_back_button">処理が正常に終了するまでもうしばらくお待ちください</string>

    <!-- 50音のア段 -->
    <string-array name="japanese_syllabary_regex">
        <item>[ァ-オ]</item> <!-- ァ-オ -->
        <item>[カ-ゴ]</item> <!-- カ-ゴ -->
        <item>[サ-ゾ]</item> <!-- サ-ゾ -->
        <item>[タ-ド]</item> <!-- タ-ド -->
        <item>[ナ-ノ]</item> <!-- ナ-ノ -->
        <item>[ハ-ポ]</item> <!-- ハ-ポ -->
        <item>[マ-モ]</item> <!-- マ-モ -->
        <item>[ャ-ヨ]</item> <!-- ャ-ヨ -->
        <item>[ラ-ロ]</item> <!-- ラ-ロ -->
        <item>[ヮ-ン]</item> <!-- ヮ-ン -->
    </string-array>
    <string-array name="japanese_syllabary_text">
        <item>ア</item>
        <item>カ</item>
        <item>サ</item>
        <item>タ</item>
        <item>ナ</item>
        <item>ハ</item>
        <item>マ</item>
        <item>ヤ</item>
        <item>ラ</item>
        <item>ワ</item>
    </string-array>

    <!-- 写真一覧画面 -->
    <string name="select_button_text">選択</string>
    <string name="select_button_cancel_text">キャンセル</string>
    <string name="message_on_confirm_delete_photo_link">削除してもよろしいでしょうか？</string>
    <string name="message_on_deleted_photo_link">写真を削除しました</string>

    <!-- すべての写真一覧画面 -->
    <string name="all_button_text">すべて</string>
    <string name="year_button_text">年別</string>
    <string name="month_button_text">月別</string>
    <string name="day_button_text">日別</string>
    <string name="finish_button_text">確定</string>
    <string name="selected_photo_count_text">枚の写真を選択中</string>
</resources>
